--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="https://onecompiler.com/html/42jtr92pg">One Compiler</a></li>
+			<li><a href="https://www.programiz.com/html/online-compiler/">programiz</a></li>
+			<li><a href="https://www.onlinegdb.com/online_html_compiler">Online gdb</a></li>
+		</ul>
+	</nav>
+	<selection>
+		<h2>3 random audios</h2>
+		<audio controls>
+			http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3
+		</audio>
+		<audio controls>
+			http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg
+		</audio>
+		<audio controls>
+			http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3
+		</audio>
+	</selection>
     <script type="text/javascript" src="./script.js">
 </script>
 
