--- a/main.html
+++ b/main.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
+	
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-			<li><a href="https://onecompiler.com/html/42jtr92pg">One Compiler</a></li>
-			<li><a href="https://www.programiz.com/html/online-compiler/">programiz</a></li>
-			<li><a href="https://www.onlinegdb.com/online_html_compiler">Online gdb</a></li>
+			<li><a href="https://eloquentjavascript.net/">1</a></li>
+			<li><a href="https://www.w3schools.com/tags/att_scope.asp">2</a></li>
+			<li><a href="https://microsoftedge.microsoft.com/addons/detail/bookmark-llama-shared-b/ipnohflnkaljegnpiepbfefnnodmgkmp">3</a></li>
 		</ul>
 	</nav>
-		<h2>3 random audios</h2>
-		<audio controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
-		</audio>
-		<audio controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-		</audio>
-		<audio controls>
-			<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
-		</audio>
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h2>3 random audios</h2>
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+		<source src=" http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+	</audio>
+    <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+    </audio>
+    <audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"><source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+    </audio>
+        
+		<!-- the entire body must be written by student -->
+   
 
 </body>
 
